--- a/call_center_s1/package.json
+++ b/call_center_s1/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.3.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
+    "mqtt": "^5.0.2",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
