--- a/call_center_s1/package.json
+++ b/call_center_s1/package.json
@@ -25,8 +25,9 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
+    "d3-ease": "^3.0.1",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
@@ -60,10 +61,10 @@
     "react-select": "^5.7.4",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.3.0",
+    "sass-loader": "^12.6.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
-    "style-loader": "^3.3.1",
+    "style-loader": "^3.3.3",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "web-vitals": "^2.1.4",
