--- a/call_center_s1/package.json
+++ b/call_center_s1/package.json
@@ -25,6 +25,7 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "clsx": "^2.0.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "d3-ease": "^3.0.1",
@@ -61,7 +62,9 @@
     "react-select": "^5.7.4",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
+    "sass": "^1.66.1",
     "sass-loader": "^12.6.0",
+    "scss": "^0.2.4",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.3",
